# objict

./: .gitignore  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  bump_version.py  pyproject.toml  requirements.txt  setup.py  test1.json  tox.ini
.github/workflows/: main.yml
objectdict/: __init__.py
objict/: __init__.py
tests/: example.json  test_objict.py
